SalesForce/csp-sfdc-org/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepts_Transactions_before_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added/Modified specifically for the CSP</description>
        <label>Accepts Transactions Before Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accepts_Visa_MasterCard_Discover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added/Modified specifically for the CSP</description>
        <label>Accepts Visa/MasterCard/Discover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Age_Days__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Auto_Number__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Account Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Email1__c</fullName>
        <description>This is the duplicate email field it will update using on workflow getting Account_Email1(Email) Value. In case object we can fetch  Text type only  not Email type.</description>
        <label>Account Emaild1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email2__c</fullName>
        <encrypted>true</encrypted>
        <label>Account Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Email3__c</fullName>
        <description>This is the duplicate email field it will update using on workflow getting Account_Email1(Email) Value. In case object we can fetch Text type only not Email type.</description>
        <label>Account Emaild2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Flags__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Account Flags</label>
        <picklist>
            <picklistValues>
                <fullName>Seasonal Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Opt Out Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Discount Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Min Billing Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Flag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Defined Flag</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acquirer__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Acquirer</label>
        <picklist>
            <picklistValues>
                <fullName>10 Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 USBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56 U.S. Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>67 Canadian U.S. Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>68 American State Bank (ABS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>88 ICON Payment Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91 Comerica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>94 Deutsche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95 Wells Fargo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>A - ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I - INACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y - INACTIVE YTD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Phone_Number__c</fullName>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address_4_Fax_Number__c</fullName>
        <label>Additional Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Address_4_Name__c</fullName>
        <label>Address 4 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Merchant_No__c</fullName>
        <encrypted>true</encrypted>
        <label>Alternate Merchant No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Visa_MC_Discover_Sales__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Annual Visa/MC/Discover Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Annual Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Ticket__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Average Ticket</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Bank Account Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Bank_Identification_Number_BIN__c</fullName>
        <label>Bank Identification Number (BIN)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Bank Routing Number</label>
        <picklist>
            <picklistValues>
                <fullName>0110-0001-5 / FEDERAL RESERVE BANK OF BOSTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0210-0120-8 / FRB NEW YORK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0310-0004-0 / FEDERAL RESERVE BANK OF PHILADELPHIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0410-0001-4 / FEDERAL RESERVE BANK OF CLEVELAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0510-0003-3 / FEDERAL RESERVE BANK OF RICHMOND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0510-9999-2 / FRB RICH GOVT AGCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0520-0027-8 / FRB, BALTIMORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0530-0020-6 / FRB, CHARLOTTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0610-0014-6 / FEDERAL RESERVE BANK OF ATLANTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0620-0019-0 / FEDERAL RESERVE BANK OF BIRMINGHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630-0019-9 / FEDERAL RESERVE BANK OF JACKSONVILLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0650-0021-0 / FEDERAL RESERVE BANK OF NEW ORLEANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0660-0010-9 / FEDERAL RESERVE BANK OF MIAMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0710-0030-1 / FEDERAL RESERVE BANK OF CHICAGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0810-0004-5 / FEDERAL RESERVE BANK OF ST. LOUIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0910-0008-0 / FEDERAL RESERVE BANK OF MINNEAPOLIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1010-0004-8 / FEDERAL RESERVE BANK OF KANSAS CITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1020-0019-9 / FEDERAL RESERVE BK OF DENVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1110-0003-8 / FEDERAL RESERVE BANK OF DALLAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1120-0001-1 / FEDERAL RESERVE BANK OF EL PASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1130-0004-9 / FEDERAL RESERVE BANK OF HOUSTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1140-0072-1 / FEDERAL RESERVE BANK OF SAN ANTONIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1210-0037-4 / FEDERAL RESERVE BK OF SAN FRANCISCO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Business Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Swiped__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Card Swiped</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chain_City__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chain City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Country__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chain Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Phone_Number__c</fullName>
        <label>Chain Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chain_State__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chain State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Street__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chain Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chain_Zip_Postal_Code__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chain Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Account_Number__c</fullName>
        <label>Chargeback Account Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Chargeback_Address_Name__c</fullName>
        <label>Chargeback Address Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Attention_To__c</fullName>
        <label>Chargeback Attention To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_City__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chargeback City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Country__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chargeback Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Fax_Number__c</fullName>
        <label>Chargeback Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chargeback_Lookup__c</fullName>
        <label>Chargeback Lookup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Method__c</fullName>
        <label>Chargeback Delivery Method</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Routing_Number__c</fullName>
        <label>Chargeback Routing Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Chargeback_State__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chargeback State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Street_Address_1__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chargeback Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback_Street_Address_2__c</fullName>
        <label>Chargeback Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback_Zip_Postal_Code__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Chargeback Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_at_Legal_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added/Modified specifically for the CSP</description>
        <label>Contact Name At Legal Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact Name at Legal Address)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added/Modified specifically for the CSP</description>
        <label>Contact Name At Physical Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_Service_Phone__c</fullName>
        <description>Also added/modified for Sales Effectiveness</description>
        <label>Cust Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Lifet__c</fullName>
        <label>Customer Lifetime Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Wait__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Customer Wait Before Receiving Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Address__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <formula>DBA_Street__c  &amp; BR() &amp;
 DBA_City__c &amp; &quot;, &quot;&amp; DBA_State__c   &amp; &quot;, &quot; &amp;  DBA_Zip_Postal_Code__c  &amp; &quot;, &quot; &amp;  BR ()&amp; DBA_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Attention_To__c</fullName>
        <label>DBA Attention To</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_City__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Country__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Fax__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Phone__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DBA_State__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Street__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DBA_Zip_Postal_Code__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>DBA Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_1_Last_4__c</fullName>
        <label>DDA 1 (Last 4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_2_Last_4__c</fullName>
        <label>DDA 2 (Last 4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_3_Last_4__c</fullName>
        <label>DDA 3 (Last 4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Record_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to indicate that record was created during DM. This column should be added before loading data using Data Loader.</description>
        <label>DM Record Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Source__c</fullName>
        <description>DM source system. For example, MS Dynamics. This column should be added before loading data using Data Loader.</description>
        <label>DM Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Account_Number__c</fullName>
        <label>Deposit Account Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Deposit_Routing_Number__c</fullName>
        <label>Deposit Routing Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Have_a_Fulfillment_House__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Does Merchant Have A Fulfillment House?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_Business_Premises__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Does Merchant Own Business Premises?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, merchant leases the business premises</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMV_Ready__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>EMV Ready</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Preference__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Email Preference</label>
        <picklist>
            <picklistValues>
                <fullName>All Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Related Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Account_Number__c</fullName>
        <label>Equipment Account Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Equipment_Routing_Number__c</fullName>
        <label>Equipment Routing Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Extended_Services__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Are Extended Services Offered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Reference_Id__c</fullName>
        <description>Also added/modified for Sales Effectiveness</description>
        <externalId>true</externalId>
        <label>External Reference Id</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <description>Also added/modified for Sales Effectiveness</description>
        <label>Federal Tax ID</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Foreign_Currency__c</fullName>
        <label>Foreign Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hierarchy_No__c</fullName>
        <label>Hierarchy #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INT Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_No_Explain__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>If No, Explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instalment_Indicator__c</fullName>
        <label>Instalment Indicator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Consistent_with_Business__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Is Inventory Consistent With Business?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_4_SSN__c</fullName>
        <label>Social Security Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Date Last Active</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Attention_To__c</fullName>
        <label>Legal Attention To</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Also added/modified for Sales Effectiveness</description>
        <label>Legal Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MCC_Name__c</fullName>
        <formula>Merchant_Category_Code__r.MCC_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MID_External_Id__c</fullName>
        <description>Field used for integration purposes to handle</description>
        <externalId>true</externalId>
        <label>MID (External Id)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVV_Code__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>MVV Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Order__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Mail Order/Telephone/Internet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manually__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Manually Keyed With Imprint</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Market Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO/TO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Rep__c</fullName>
        <label>Marketing Rep</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added/Modified specifically for the CSP</description>
        <label>Marketing/Sales Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Batch_Size__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Max Batch Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Days_to_Settle__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Max Days to Settle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_Category_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>4 Digit Merchant Category Code</description>
        <label>MCC Code</label>
        <referenceTo>Merchant_Category_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Corp__c</fullName>
        <formula>LEFT( Hierarchy_No__c ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchant Corp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Location__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Merchant Location</label>
        <picklist>
            <picklistValues>
                <fullName>Retail Location with Store Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchants_DBA_Name__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <inlineHelpText>“Doing Business As” Name</inlineHelpText>
        <label>Merchant DBA Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Of_Store_Locations__c</fullName>
        <label># of Store Locations</label>
        <summaryFilterItems>
            <field>Location__c.Type__c</field>
            <operation>equals</operation>
            <value>Store</value>
        </summaryFilterItems>
        <summaryForeignKey>Location__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Merchant_No__c</fullName>
        <encrypted>true</encrypted>
        <label>Old Merchant No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Due_Date__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Onboarding Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Onboarding Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outlet_Store__c</fullName>
        <label>Outlet/Store</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_City__c</fullName>
        <label>Owner 1 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Country__c</fullName>
        <label>Owner 1 Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>